# GitGuard

./: .env  .gitignore  README.md  main.py  notes.txt  pyproject.toml
src/gitguard/: gemini.py  git_ops.py  main.py
